Fixed behavior of refresh menu item
This had to be changed because the actionbar no longer has an indeterminate progress bar

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/all_feed_refresh"
         android:title="@string/refresh_label"
         android:icon="?attr/navigation_refresh"
-        custom:showAsAction="ifRoom|collapseActionView">
+        custom:showAsAction="ifRoom">
     </item>
     <item
         android:id="@+id/about_item"
